# TelComMobileNetwork

./: NetConfAgentTestStrings.txt  disable-nacm.xml  mobile-network.yang  mobnet.xml  rpc-example.xml
MesonTest/: main.cpp  meson.build
MesonTest/api/: IWrapper.h
MesonTest/headers/: Wrapper.h
MesonTest/source/: Wrapper.cpp  meson.build
TestProject/: main.cpp  meson.build
TestProject/include/: MobileClient.hpp  NetConfAgent.hpp
TestProject/src/: MobileClient.cpp  NetConfAgent.cpp  meson.build
TestProject/test/: MobileClientTest.cpp  NetConfAgentMock.hpp  meson.build
test/: main.cpp  meson.build
test2/: main.cpp  meson.build
